# luminclaw

./: .gitignore  AGENT_CORE_DESIGN.md  CLAUDE.md  Dockerfile.lumin  FRAMEWORK_ANALYSIS.md  LICENSE  README.md  ROADMAP.md  esbuild.embedded.mjs  lumin-entrypoint.sh  package-lock.json  package.json  prismer-agent-core-0.3.1.tgz
docs/: 01-agent-loop-analysis.md  02-tool-orchestration-analysis.md  03-context-management-analysis.md  04-multi-agent-analysis.md  05-hooks-permissions-analysis.md  06-improvement-roadmap.md  2026-03-26-dual-loop-v2-design.md  API.md  DUAL_LOOP_ARCHITECTURE.md  MEMORY.md  TEST_COVERAGE.md  TOOL_COMPLETION_INVARIANTS.md
examples/: basic.ts  custom-tools.ts  streaming.ts
rust/: Cargo.toml  Dockerfile
rust/crates/lumin-core/: Cargo.toml
rust/crates/lumin-core/src/: abort.rs  agent.rs  agents.rs  artifacts.rs  channels.rs  compaction.rs  config.rs  directives.rs  hooks.rs  ipc.rs  lib.rs  loop_dual.rs  loop_factory.rs  loop_single.rs  loop_types.rs  memory.rs  microcompact.rs  prompt.rs  provider.rs  session.rs  skills.rs  sse.rs  task.rs  tokens.rs  tools.rs  workspace.rs  world_model.rs
rust/crates/lumin-core/src/tools/: builtins.rs  memory_tools.rs  mod.rs
rust/crates/lumin-core/tests/: abort.rs  builtins_integration.rs  integration.rs  tool_registration.rs
rust/crates/lumin-server/: Cargo.toml
rust/crates/lumin-server/src/: http.rs  main.rs  ws.rs
scripts/: build-embedded.sh
src/: abort.ts  agent-fs-directive-scanner.ts  agent.ts  agents.ts  cli.ts  compaction.ts  config.ts  directives.ts  embedded.ts  hooks.ts  index.ts  ipc.ts  log.ts  memory-file-backend.ts  memory.ts  microcompact.ts  observer.ts  permissions.ts  prompt.ts  provider.ts  schemas.ts  server.ts  session.ts  skills.ts  sse.ts  streaming-executor.ts  tokens.ts  tools.ts  version.ts  workspace.ts
tests/: abort-module.test.ts  abort.test.ts  agent-abort.test.ts  agent-permissions.test.ts  agent-v2.test.ts  agent.test.ts  agents.test.ts  approval.test.ts  artifacts.test.ts  builtins.test.ts  compaction.test.ts  (+39 more)
(+92 files in other folders)
