[workspace]
resolver = "2"
members = ["crates/lumin-core", "crates/lumin-server"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Prismer AI <dev@prismer.ai>"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
futures = "0.3"
