[package]
name = "lumin-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lumin agent gateway server — HTTP + WebSocket"

[[bin]]
name = "lumin-server"
path = "src/main.rs"

[dependencies]
lumin-core = { path = "../lumin-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
